--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,6 +5,8 @@
 <body>
     <!-- include navbar -->
     <%- include('./includes/navbar.ejs')%>
+
+    <h5 class=" mt-3 text-center ">Fill your complaint</h5><hr>
     
     <form 
         action="<%= server_url %>complain" 
@@ -47,12 +49,12 @@
             </div>
             <div class="form-group">
                 <textarea 
-                    name="" 
+                    name="description" 
                     id="" 
                     cols="30" 
                     rows="10"
-                    class="form-control"
-                    name="description">
+                    placeholder="fill your complains here"
+                    class="form-control"> Fill your complaints here
                 </textarea>
             </div>
             <div class="from-group">
