--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,14 +1,26 @@
-<ul class="nav navbar justify-content-center">
-    <li class="nav-item">
-        <a href="<%=server_url%>" class="nav-link">Home</a>
-    </li>
-    <li class="nav-item">
-        <a href="<%=server_url%>about" class="nav-link">About</a>
-    </li>
-    <li class="nav-item">
-        <a href="<%=server_url%>contact" class="nav-link">contact</a>
-    </li>
-    <li class="nav-item">
-        <a href="<%=server_url%>product/create" class="nav-link">create product</a>
-    </li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <ul class="nav navbar justify-content-center">
+        <li class="nav-item">
+            <a href="<%= server_url %> " class = "nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+            <a href="<%= server_url %> about " class = "nav-link">About</a>
+        </li>
+        <li class="nav-item">
+            <a href="<%= server_url %> contact " class = "nav-link">Contact Us</a>
+        </li>
+        <li class="nav-item">
+            <a href="<%= server_url %> uploads " class = "nav-link">Uploads</a>
+        </li>
+    </ul>
+    
+</body>
+</html>
