--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- include head -->
-<%- include('./includes/head.ejs')  %> 
-<body>
-   <!-- include navbar -->
-    <%- include('./includes/navbar.ejs')%>
-
-    <h1>Welcome to my E-shop</h1>   
-
+  <!-- include head tag -->
+  <%- include('./includes/head.ejs') %>
+  <body>
+    <!-- navbar -->
+    <%- include('./includes/navbar.ejs') %>
+    <h1>Welcome to my E-Shop</h1>
     <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus ullam ducimus non, tempore, id explicabo veniam eum dolorem a ipsam sint reiciendis soluta tempora magni mollitia amet voluptatibus, distinctio recusandae!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil suscipit
+      itaque culpa beatae enim quasi. Earum natus autem quidem maiores, facere
+      repudiandae dicta nisi tempore ratione molestiae officiis. Obcaecati,
+      asperiores!
     </p>
-
-</body>
+  </body>
 </html>
