--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- include head -->
-<%- include('./includes/head.ejs') %> 
-<body>
-     <!-- include navbar -->
-    <%- include('./includes/navbar.ejs')%>
-    <p>
-        This page is about the status of the company you can check our sister website for more referral 
-    </p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <%- include('./includes/navbar.ejs') %>
+    <h1>About us</h1>
+  </body>
 </html>
